# mirror-eval

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  README.md  pyproject.toml  search.js  src.html
local/: runner.py
src/: __init__.py  mirror_eval.html
src/mirror_eval/: algorithms.py  core.html  experiments.html  opik.html
src/mirror_eval/core/: __init__.py  config.html  config.py  embedder.py
src/mirror_eval/experiments/: __init__.py  opik_capabilities.html
src/mirror_eval/experiments/opik_capabilities/: __init__.py  custom_metric.html  custom_metric.py  example_call.py
src/mirror_eval/models/: outputs.py
src/mirror_eval/opik/: __init__.py  metric.html  metric.py  metrics.py  prompts.py  service.html  service.py  template.html  template.py
tests/: __init__.py  test_fibonacci.py
tests/unit/: __init__.py  test_metric.py  test_opik_service.py
