[project]
name = "mirror-eval"
version = "0.1.0"
description = "A beautiful description."
authors = [
  {name = "reinder.vosdewael@childmind.org", email = "reinder.vosdewael@childmind.org"}
]
license = "LGPL-2.1"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "opik>=1.5.0",
    "pydantic>=2.10.6",
    "pydantic-settings>=2.8.0",
]

[dependency-groups]
dev = [
  "pytest>=8.3.4",
  "mypy>=1.13.0",
  "pre-commit>=4.0.1",
  "pytest-cov>=6.0.0",
  "ruff>=0.8.1"
]
docs = ["pdoc>=15.0.0"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.mypy]
ignore_missing_imports = true
plugins = ["pydantic.mypy"]

[tool.ruff]
line-length = 88
indent-width = 4
src = ["src"]
target-version = "py312"

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "COM812", # can conflict with formatter.
    "ISC001" # can conflict with formatter.
]
fixable = ["ALL"]
unfixable = []

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
