[project]
name = "mirror-eval"
version = "0.1.0"
description = "A beautiful description."
authors = [
  {name = "reinder.vosdewael@childmind.org", email = "reinder.vosdewael@childmind.org"}
]
license = "LGPL-2.1"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "opik>=1.5.0",
    "pydantic>=2.10.6",
    "pydantic-settings>=2.8.0",
    "numpy>=2.2.3",
    "scikit-learn>=1.6.1",
    "ollama>=0.4.7",

[tool.uv]
dev-dependencies = [
    "pytest>=8.3.4",
    "mypy>=1.13.0",
    "pre-commit>=4.0.1",
    "pytest-cov>=6.0.0",
    "pytest-asyncio>=0.25.3",
    "ruff>=0.8.1",
    "pdoc>=15.0.1",
]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.mypy]
ignore_missing_imports = true
plugins = ["pydantic.mypy"]

[tool.ruff]
line-length = 88
indent-width = 4
src = ["src"]
target-version = "py312"

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "COM812", # can conflict with formatter.
    "ISC001" # can conflict with formatter.
]
fixable = ["ALL"]
unfixable = []

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = [
    "S101" # Allow asserts in tests.
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
